--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StoryApp">
         <activity
+            android:name=".view.login.LoginActivity"
+            android:exported="false"/>
+        <activity
             android:name=".view.signup.SignUpActivity"
             android:exported="false" />
         <activity
