penyusuaian untuk menampilkan all story

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,10 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
+        buildConfigField("String", "TOKEN", API_TOKEN)
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
@@ -55,4 +57,7 @@ dependencies {
 
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
+
 }
