--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,9 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.13.1'
 
+    def camerax_version = "1.1.0-beta02"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
+
 }
