--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", 'API_URL', "\"https://story-api.dicoding.dev/v1/#/\""
 
     }
 
@@ -33,6 +34,9 @@ android {
     }
     viewBinding {
         enabled = true
+    }
+    buildFeatures {
+        buildConfig = true
     }
 }
 
